jobbet med latexen

--- a/oving1/anettefm_ps1.tex
+++ b/oving1/anettefm_ps1.tex
@@ -26,7 +26,7 @@ left=20mm,
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Det som inkluderes i \maketitle
-\title{Tittel}
+\title{øving 1 \\ TDT4200}
 \author[1]{Anette Fossum Morken}
 \date{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -35,25 +35,7 @@ left=20mm,
 \maketitle
 \end{titlepage}
 
-\newpage 
-%innholdsfortegnelse:
-\renewcommand{\contentsname}{\centering Innholdfortegnelse} %innholdsfortegnelse
-\tableofcontents
 
-\newpage
-%\begin{abstract}
-
-%\end{abstract}
-
-\section{overskrift} % For å ikke ha nummerering: *
-\subsection{underoverskrift}
-
-Bla bla bla \cite{referanse_bok}. Bla bla bla \cite{referanse_artikel}.
-\begin{figure}[H]
-\includegraphics[]{4302}
-\caption{figurtekst, \cite{referanse_internett}}
-\end{figure}
-skalcmnskla$^{ndjsak}$
 
 
 
