oppg1 nesten ferdig

--- a/oving1/anettefm_ps1.tex
+++ b/oving1/anettefm_ps1.tex
@@ -42,12 +42,13 @@ Flynns taksanomi er en klassifisering av dataarkitektur. Den gir antall instruks
     \hline
   \end{tabular}
 
-
 Hvordan 
 hvor 
-hvorfor i Flynns taxonomy
+hvorfor  MPI i Flynns taxonomy
 
+\subsection*{b}
+I delt minne ar alle prosessorene tilgang til det samme minnet og man trenger derfor ikke å sende informason mellom prosessorene. MPI kan brukes på delt minne, men det er ikke det mest optimale og MPI er ikke laget for å brukes på en prosessor med delt minne.
 
-
-
+\subsection*{c}
+I fordelt minne har hver prosessor sitt eget minne og har kun tilgang til dette. Hvis prosessorene skal utveksjle data må dette sendes mellom prosessorene. Ved fordelt minne er MPI det man bruker. MPI går ut på å sende informasjon mellom prosessorere.
 \end{document}
