liten endring i oppg1

--- a/oving1/anettefm_ps1.tex
+++ b/oving1/anettefm_ps1.tex
@@ -42,9 +42,7 @@ Flynns taksanomi er en klassifisering av dataarkitektur. Den gir antall instruks
     \hline
   \end{tabular}
 
-Hvordan 
-hvor 
-hvorfor  MPI i Flynns taxonomy
+Hvordan  hvor  hvorfor  MPI i Flynns taxonomy
 
 \subsection*{b}
 I delt minne ar alle prosessorene tilgang til det samme minnet og man trenger derfor ikke å sende informason mellom prosessorene. MPI kan brukes på delt minne, men det er ikke det mest optimale og MPI er ikke laget for å brukes på en prosessor med delt minne.
