--- a/oving1/anettefm_ps1.tex
+++ b/oving1/anettefm_ps1.tex
@@ -41,7 +41,7 @@ Flynns taksanomi er en klassifisering av dataarkitektur. Den gir antall instruks
     \textbf{multiple data} & SIMD & MIMD & SPMD & MPMD \\
     \hline
   \end{tabular}
-
+MPI er en måte å parallelisere på bdsjbfdhsjfb
 Hvordan 
 hvor 
 hvorfor  MPI i Flynns taxonomy
