ferdig og levert

--- a/oving3/anettefm_ps3.tex
+++ b/oving3/anettefm_ps3.tex
@@ -51,12 +51,18 @@ Andre feil ved koden:
 \item Når inputet er lengre en 10 elementer kopierer programmet de 10 første elementete i inputet og printer ut disse ti i motesatt rekkefølge.
 \end{itemize}
 \section*{Problem 2, optimalisering}
-
+\subsection*{b}
+kjøretider på datasal:\\
+real: 0m2.215s \\
+user: 0m0.409s \\
+sys 0m0.032s\\
+\subsection*{c}
+Kjøretid på CMB: 3.34s
 \subsection*{d}
-Kjøretid på Vilje:
-real :   0m0.980s
-user:    0m0.800s
-sys :    0m0.104s
+Kjøretid på Vilje:\\
+real :   0m0.980s\\
+user:    0m0.800s\\
+sys :    0m0.104s\\
 
 Dette er betydelig bedre enn tidene på datasalen(tulipan). Dette skyldes at chachen på datasalen er 8Mb mens på vilje er den 20Mb. 
 
