--- a/oving4/anettefm_ps4.tex
+++ b/oving4/anettefm_ps4.tex
@@ -25,7 +25,7 @@ left=20mm,
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Det som inkluderes i \maketitle
-\title{Tittel}
+\title{Øving 4\\ TDT4200}
 \author[1]{Anette Fossum Morken}
 \date{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -35,7 +35,7 @@ left=20mm,
 \subsection*{Oppgave 1}
 \subsubsection*{a)}
 \begin{description}
-\item[i)]
+\item[i)] Usant
 \item[ii)] Sant
 \item[iii)] Usant
 \item[iv)] Usant
@@ -56,7 +56,7 @@ CUDA- openCL
 \subsubsection*{a)}
 \begin{description}
 \item[i)] CUDA er singel platform SW, openCL er multiplatform SW
-\item[ii)] OpenCL kompilerer mens den kjører.
+\item[ii)] 
 \end{description}
 
 \end{document}
